src/static/dev/room-dark.css
/* Dark theme. */

body {
  color: white;
  background: black;
}

:focus {
  outline-color: white;
}

a {
  color: #0080ff;
}
a:visited {
  color: #c000c0;
}

#load-wrapper, .breadcrumbs.standalone {
  color: white;
  background: black;
}

.logo img {
  box-shadow: 0 0 30px white;
}

a.logo-small {
  color: white;
}
.logo-small img {
  box-shadow: 0 0 2px white;
}
.logo-small strong {
  color: white;
}

.room-name, a.room-name {
  color: white;
}
.online-status, .settings, .settings-content {
  border-color: white;
  box-shadow: 0 0 5px white;
}
.settings, .settings-content {
  color: white;
  background: black;
}

.nick, .message.emote > .line .content {
  /* NOTE: Transitioning back bugs out for this rule in Firefox, but the
   *       browser corrects itself after the transition. */
  color: black;
}
.message.ping > .line {
  color: black;
}
.message.ping > .line time a {
  color: white;
}
.message > .line .monospace {
  background: #404040;
}

.sidebar > * {
  background: rgba(0, 0, 0, 0.5);
}

.input-bar, .input-bar .input-message-cell .input-message {
  color: white;
  background: black;
}

.input-bar .input-info-cell .alert-container,
.input-bar .input-message-cell .input-nick-prompt img {
  filter: invert(1);
  -webkit-filter: invert(1);
}

#main.very-dark > * {
  opacity: 0.5;
}

